# EventFlow

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  create_db.py  docker-compose.yml
backend/: .env.example  Dockerfile  Dockerfile.worker  pyproject.toml  requirements.txt  test_auth_output.py  test_db_init.py  test_metrics_logic.py
backend/alembic/: env.py
backend/alembic/versions/: 87925a676c08_initial_schema.py  8af6ade0be36_add_refresh_tokens_and_worker_owner.py  a1b2c3d4e5f6_worker_status_enum.py
backend/app/: main.py
backend/app/api/: auth.py  dlq.py  executions.py  health.py  metrics.py  websocket.py  workers.py  workflows.py
backend/app/core/: config.py  errors.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  api_key.py  dlq.py  enums.py  execution.py  log.py  refresh_token.py  worker.py  workflow.py
backend/app/observability/: log_helpers.py
backend/app/queue/: publisher.py  redis_client.py
backend/app/schemas/: dlq.py  execution.py  metrics.py  worker.py  workflow.py
backend/app/services/: api_key_service.py  dag_validator.py  dlq_service.py  execution_engine.py  execution_log_service.py  executor_registry.py  metrics_service.py  retry_policy.py  state_transition.py  worker_service.py  workflow_service.py
backend/app/tests/: conftest.py  test_auth.py  test_executions_api.py  test_executors.py  test_health.py  test_log_helpers.py  test_models.py  test_observability_api.py  test_rate_limit.py  test_redis_queue.py  (+7 more)
backend/scripts/: create_api_key.py  run_worker.py  seed_demo_workflows.py
(+49 files in other folders)
